--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   font-size: 18px;
   line-height: 34px;
   color: #777;
-  background: url("C:/Users/endli/Desktop/Homework/Bootstrap-portfolio/pictures/background.jpg");
+  background: url("pictures/background.jpg");
 }
 
 * {
